--- a/E_commerce_User_Behavior_Segmentation.ipynb
+++ b/E_commerce_User_Behavior_Segmentation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOVcQwoB5MaEGRTiF3IPLEy",
+      "authorship_tag": "ABX9TyPzCJUwRXFu0BALq5MuqXVG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "The reason it's \"unsupervised\" is that we are not trying to predict a specific outcome. Instead, we are using the algorithm (Hierarchical Clustering) to find hidden patterns and natural groupings in the data on its own. The model's job is to discover the customer segments, not to classify new customers into a pre-existing group.\n",
         "\n",
         "\n",
-        "Github Link :\n",
+        "Github Link : https://github.com/saikiran-18/E-commerce-User-Behavior-Segmentation.git\n",
         "\n"
       ],
       "metadata": {
